--- a/labor.html
+++ b/labor.html
@@ -61,7 +61,7 @@
 
     </div>
     <div class = "content-section">
-      <h2>What are some of the largest companies that are known to have many labor violations?</h2>
+      <h2>What Are Some of the Largest Companies That Are Known To Have Many Labor Violations?</h2>
       <p>
         <ul>
           <li>
