--- a/sites.html
+++ b/sites.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="content">
-        <div class="content-section">
+        <!-- <div class="content-section">
             <h2> Why Should You Visit Alternative Sites? </h2>
             <p>
                 It is important to visit labor-friendly alternative websites and support businesses with good labor practices for several reasons:
@@ -49,12 +49,13 @@
                 Overall, visiting labor-friendly alternative websites and supporting businesses with good labor practices is not only the ethical thing to do but also has positive economic and legal implications. By supporting businesses that prioritize their workers' rights and well-being, you can help create a better world for everyone.
 
             </p>
-        </div>
+        </div> -->
         <div class = "content-section">
             <h2> Sites To Use Instead of Amazon: </h2>
             <ul>
                 <li>
                     <a href = "https://www.overstock.com/">Overstock</a>
+                    <p>Overstock is an American internet retailer headquartered near Salt Lake City, Utah and sells primarily furniture, decor, and home improvement goods. Becuase it sells brand-name goods at discounted prices, cutomers can expect bargain prices on designer items and  </p>
                 </li>
                 <li>
                     <a href = "https://www.barnesandnoble.com/">Barnes and Noble</a>
