--- a/amazon.html
+++ b/amazon.html
@@ -33,11 +33,16 @@
                 Department of Labor Feb 1, 2023: <br>
                 <a href = "https://www.dol.gov/newsroom/releases/osha/osha20230201-0">"US DEPARTMENT OF LABOR FINDS AMAZON EXPOSED WORKERS TO UNSAFE CONDITIONS, ERGONOMIC HAZARDS AT THREE MORE WAREHOUSES IN COLORADO, IDAHO, NEW YORK"
                 </a>
+                <p>
+                    Recently, the Department of Labor issued 3 more citations of labor violations occuring in the Aurora, Colorado; Nampa, Idaho; and Castleton, New York warehouses due to failing to protect workers from hazardous conditions. Upon inspection prompted by referrals from the U.S. Attorney's Office, similar violations at other Amazon warehouses in Florida, New York, and Illinois were discovered in July 2022. In these locations, a high risk of low back injuries and other musculoskeletal disorders were found, due to the long hours, heavy lifting, and high frequency of moving packages. The Occupational Safety and Health Administration proposed almost <b>$46,875</b> in penalties for these violations.
+                </p>
             </p>
             <p>
                 <em>New York Times</em> January 31, 2023:
                 <br><a href = "https://www.nytimes.com/2023/01/31/business/economy/amazon-union-staten-island-nlrb.html">"Judge Finds Amazon Broke Labor Law in Anti-Union Effort"</a>
-
+                <p>
+                    
+                </p>
             </p>
         </div>
 
