--- a/sites.html
+++ b/sites.html
@@ -53,15 +53,31 @@
         <div class = "content-section">
             <h2> Sites To Use Instead of Amazon: </h2>
             <ul>
+                <a href = "https://www.overstock.com/">Overstock</a>
                 <li>
-                    <a href = "https://www.overstock.com/">Overstock</a>
-                    <p>Overstock is an American internet retailer headquartered near Salt Lake City, Utah and sells primarily furniture, decor, and home improvement goods. Becuase it sells brand-name goods at discounted prices, cutomers can expect bargain prices on designer items and  </p>
+                    Furniture, Decor, Home Improvement 
+                    <!-- <p>Overstock is an American internet retailer headquartered near Salt Lake City, Utah and sells primarily furniture, decor, and home improvement goods. Becuase it sells brand-name goods at discounted prices, cutomers can expect bargain prices on designer items. </p> -->
+                </li><br><br>
+                <a href = "https://www.barnesandnoble.com/">Barnes and Noble</a> 
+                <li>
+                    Books, Magazines, e-books
                 </li>
                 <li>
-                    <a href = "https://www.barnesandnoble.com/">Barnes and Noble</a>
+                    Only 6 open labor relations cases
+                </li><br><br>
+                <a href = "https://thrivemarket.com/">Thrive Market</a>
+                <li>
+                    Non-perishable goods, Household Essentials, Bath & Body products
                 </li>
                 <li>
-                    <a href = "https://thrivemarket.com/">Thrive Market</a>
+                    Other benefits: certified B corporation, plastic neutral, price matching and all organic non-GMO products
+                </li><br><br>
+                <a href = "https://www.publicgoods.com/">Public Goods</a>
+                <li>
+                    Personal Care, Home, Household, Food & Beverage, Plants
+                </li>
+                <li>
+                    Other benefits: 100% recycled, post-consumer bottles and tree-free paper, reforestation and carbon neutral shipping
                 </li>
 
             </ul>
