--- a/sites.html
+++ b/sites.html
@@ -85,14 +85,17 @@
         <div class = "content-section">
             <h2> Sites To Use Instead of Home Depot: </h2>
             <ul>
+                <a href = "https://www.lowes.com/">Lowe’s</a>
                 <li>
-                    <a href = "https://www.lowes.com/">Lowe’s</a>
+                    Appliances, Home Improvement, Outdoor, Tools, Pet Care
                 </li>
+                <a href = "https://www.tractorsupply.com/">Tractor Supply Company</a>
                 <li>
-                    <a href = "https://www.tractorsupply.com/">Tractor Supply Company</a>
+                    Home Improvement, Farming Supplies, Farming Equipment, Apparel
                 </li>
+                <a href = "https://www.menards.com/">Menards</a>
                 <li>
-                    <a href = "https://www.menards.com/">Menards</a>
+                    Home Improvement, Farming Supplies, Farming Equipment, Apparel
                 </li>
 
             </ul>
